# aegis-ai-runtime

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  Cargo.toml  README.md  policy.yaml
docs/: README.md
src/: benchmark.rs  capabilities.rs  execution_state.rs  lib.rs  main.rs  mcp.rs  policy.rs  sandbox.rs
src/tools/: http.rs  mod.rs
tests/: capability_boundaries.rs
tests/fixtures/malicious/: domain_disallowed.rhai  key_prefix_disallowed.rhai  path_outside_allowlist.rhai
