[package]
name = "aegis"
version = "0.1.0"
edition = "2021"
description = "Aegis: A Safe Agent Execution Runtime - Rhai-based sandbox for AI agents"
license = "MIT OR Apache-2.0"
authors = ["gustin"]

[dependencies]
rhai = "1.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
thiserror = "2.0"
serde_yaml = "0.9"
jsonrpsee = { version = "0.24", features = ["server"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = ["sync"]
sync = ["rhai/sync"]

[[bin]]
name = "aegis"
path = "src/main.rs"

[lib]
name = "aegis"
path = "src/lib.rs"