[package]
name = "aegis-ai-runtime"
version = "0.4.1"
edition = "2021"
description = "Aegis: A Safe Agent Execution Runtime - Rhai-based sandbox for AI agents"
license = "MIT OR Apache-2.0"
authors = ["gustin"]
homepage = "https://github.com/meganerd/aegis-ai-runtime"
repository = "https://github.com/meganerd/aegis-ai-runtime"
documentation = "https://github.com/meganerd/aegis-ai-runtime#readme"

[dependencies]
rhai = { version = "1.24", default-features = false, features = ["sync", "no_function", "no_closure", "no_module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
thiserror = "2.0"
serde_yaml = "0.9"
jsonrpsee = { version = "0.24", features = ["server"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = ["sync"]
sync = ["rhai/sync"]

[[bin]]
name = "aegis-ai-runtime"
path = "src/main.rs"

[lib]
name = "aegis_ai_runtime"
path = "src/lib.rs"